--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-native-firebase/auth": "^17.5.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~48.0.15",
+    "expo": "48.0.7",
+    "expo-image": "~1.0.1",
     "expo-image-picker": "~14.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -21,10 +22,15 @@
     "react-native": "0.71.8",
     "react-native-document-picker": "^9.0.1",
     "react-native-image-picker": "^5.3.1",
+    "react-native-image-slider": "^2.0.3",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-swiper": "^1.6.0",
     "uid": "^2.0.2",
-    "expo-image": "~1.0.1"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
