--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/auth": "^17.5.0",
     "@react-navigation/native": "^6.1.6",
@@ -28,10 +29,10 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-swiper": "^1.6.0",
-    "uid": "^2.0.2",
     "react-native-web": "~0.18.10",
-    "@expo/webpack-config": "^18.0.1"
+    "uid": "^2.0.2",
+    "vercel": "^29.4.0",
+    "undefined": "react-native-progress/Bar"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
