--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-document-picker": "^9.0.1",
+    "react-native-fast-toast": "^3.0.1",
     "react-native-image-picker": "^5.3.1",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^2.0.7",
@@ -29,10 +30,10 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.10",
     "uid": "^2.0.2",
-    "vercel": "^29.4.0",
-    "undefined": "react-native-progress/Bar"
+    "vercel": "^29.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
