--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
