--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "4.5.0",
@@ -34,7 +35,8 @@
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.10",
     "uid": "^2.0.2",
-    "vercel": "^29.4.0"
+    "vercel": "^29.4.0",
+    "expo-screen-orientation": "~5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
