--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "firebase": "9",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-fast-toast": "^3.0.1",
     "react-native-image-picker": "^5.3.1",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-orientation-locker": "^1.5.0",
+    "react-native-paper": "^5.8.0",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated-carousel": "^3.3.2",
     "react-native-safe-area-context": "4.5.0",
