--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.71.8",
     "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.0.1",
+    "react-native-elements": "^3.4.3",
     "react-native-fast-toast": "^3.0.1",
     "react-native-image-picker": "^5.3.1",
     "react-native-image-slider": "^2.0.3",
