--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.10",
     "uid": "^2.0.2",
-    "vercel": "^29.4.0"
+    "vercel": "^29.4.0",
+    "expo-av": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
