--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-firebase/auth": "^17.5.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "48.0.7",
+    "expo": "~48.0.18",
     "expo-image": "~1.0.1",
     "expo-image-picker": "~14.1.1",
     "expo-screen-orientation": "~5.1.1",
