--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@react-native-firebase/auth": "^17.5.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "d3": "^7.8.5",
+    "deprecated-react-native-prop-types": "^4.2.1",
     "expo": "~48.0.18",
+    "expo-av": "~13.2.1",
     "expo-image": "~1.0.1",
     "expo-image-picker": "~14.1.1",
     "expo-screen-orientation": "~5.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "9",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-fast-toast": "^3.0.1",
@@ -37,11 +40,11 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.4.0",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.10",
     "uid": "^2.0.2",
-    "vercel": "^29.4.0",
-    "expo-av": "~13.2.1"
+    "vercel": "^29.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
