--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@bam.tech/react-native-make": "^3.0.3",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/app": "^17.5.0",
