--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.10",
     "uid": "^2.0.2",
-    "vercel": "^29.4.0"
+    "vercel": "^29.4.0",
+    "@react-native-community/netinfo": "9.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
