--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "d3": "^7.8.5",
     "deprecated-react-native-prop-types": "^4.2.1",
-    "expo": "~48.0.18",
+    "expo": "^48.0.0",
     "expo-av": "~13.2.1",
     "expo-image": "~1.0.1",
     "expo-image-picker": "~14.1.1",
