--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,7 +12,9 @@ ENV['EX_DEV_CLIENT_NETWORK_INSPECTOR'] = '1' if podfile_properties['EX_DEV_CLIEN
 platform :ios, podfile_properties['ios.deploymentTarget'] || '13.0'
 install! 'cocoapods',
   :deterministic_uuids => false
-
+  # 2 lines to fix android bug
+# pod 'rn-fetch-blob',
+# :path => '../node_modules/rn-fetch-blob'
 prepare_react_native_project!
 use_modular_headers!
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
